Adjusted desktop spacing and sizing. Adjusted home hero header to fixed. Works on all browsers

--- a/themes/main-theme/assets/css/styles.css
+++ b/themes/main-theme/assets/css/styles.css
@@ -8,11 +8,19 @@
 html, body {
   position: relative;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  color: #2D2D2D; }
+
+html {
+  overflow: hidden; }
+
+body {
+  overflow: auto; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 1.4rem;
-  font-family: "Lato",sans-serif; }
+  font-size: 1.5rem;
+  font-family: "Lato",sans-serif;
+  font-weight: 400; }
 
 a {
   text-decoration: none; }
@@ -22,6 +30,7 @@ a {
   top: 0;
   right: 0;
   left: 0;
+  z-index: 10;
   padding: 0.75rem 1.5rem;
   background-color: transparent;
   text-align: right; }
@@ -43,10 +52,14 @@ a {
   color: #2D2D2D; }
 
 .home__header {
-  height: 80vh;
+  height: 75vh;
   background-color: #F9F9F9;
   background-repeat: no-repeat;
   background-position: center; }
+
+@media screen and (min-width: 992px) {
+  .home__header {
+    height: 80vh; } }
 
 .home__overlay {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, rgba(47, 128, 237, 0.5)), to(rgba(24, 177, 249, 0.5)));
@@ -56,6 +69,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -63,6 +77,18 @@ a {
   width: 100%;
   height: 100%;
   padding: 2rem; }
+
+.home__overlay #go-down-button {
+  position: absolute;
+  left: 50%;
+  bottom: 1rem;
+  font-size: 2.5rem;
+  color: #2D2D2D;
+  cursor: pointer; }
+
+@media screen and (min-width: 1024px) {
+  .home__overlay {
+    padding: 5rem; } }
 
 .home__content {
   -webkit-box-flex: 0;
@@ -72,32 +98,51 @@ a {
   color: #F2F2F2;
   opacity: 1; }
 
-@media screen and (min-width: 992px) {
-  .home__content {
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 75%;
-        -ms-flex: 0 1 75%;
-            flex: 0 1 75%; } }
-
-@media screen and (min-width: 1024px) {
-  .home__content {
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 40%;
-        -ms-flex: 0 1 40%;
-            flex: 0 1 40%; } }
-
 .home__content h2 {
   font-size: 3rem;
   font-weight: 900;
   text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25); }
 
 .home__content p {
+  display: block;
   margin: 1rem 0;
   font-size: 1.2rem; }
+
+@media screen and (min-width: 992px) {
+  .home__content p {
+    width: 75%; } }
+
+@media screen and (min-width: 1024px) {
+  .home__content p {
+    width: 42%; } }
 
 .home__content a {
   display: inline-block;
   margin-top: 1rem;
   padding: 0.5rem;
+  font-size: 1.2rem;
   color: #F2F2F2;
   border: 2px solid #F2F2F2; }
+
+.home__who-cta {
+  padding: 3rem 2rem;
+  background-color: #F9F9F9;
+  text-align: center; }
+
+.home__who-cta h2 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem; }
+
+.home__who-cta p {
+  text-align: left;
+  font-weight: 300;
+  font-size: 1.2rem; }
+
+@media screen and (min-width: 992px) {
+  .home__who-cta p {
+    display: inline-block;
+    width: 90%; } }
+
+@media screen and (min-width: 1024px) {
+  .home__who-cta p {
+    width: 75%; } }
