--- a/themes/main-theme/assets/scss/pages/_home.scss
+++ b/themes/main-theme/assets/scss/pages/_home.scss
@@ -1,32 +1,44 @@
 .home{
 
   &__header{
-    height: 80vh;
+    height: 75vh;
     background-color: $lightest-gray;
     background-repeat: no-repeat;
     background-position: center;
+
+    @media screen and (min-width: $tablet){
+      height: 80vh;
+    }
+
   }
 
   &__overlay{
     @include blue-gradient;
     display: flex;
+    position: relative;
     align-items: center;
     width: 100%;
     height: 100%;
     padding: 2rem;
+
+    #go-down-button{
+      position: absolute;
+      left: 50%;
+      bottom: 1rem;
+      font-size: 2.5rem;
+      color: $default-text-color;
+      cursor: pointer;
+    }
+
+    @media screen and (min-width: $desktop){
+      padding: 5rem;
+    }
   }
 
   &__content{
     flex: 0 1 100%;
     color: $alt-text-color;
     opacity: 1;
-
-    @media screen and (min-width: $tablet){
-      flex: 0 1 75%;
-    }
-    @media screen and (min-width: $desktop){
-      flex: 0 1 40%;
-    }
 
     h2{
       font-size: 3rem;
@@ -35,16 +47,53 @@
     }
 
     p{
+      display: block;
       margin: 1rem 0;
-      font-size: 1.2rem;
+      font-size: $default-font-size;
+
+      @media screen and (min-width: $tablet){
+        width: 75%;
+      }
+      @media screen and (min-width: $desktop){
+        width: 42%;
+      }
+
     }
 
     a{
       display: inline-block;
       margin-top: 1rem;
       padding: 0.5rem;
+      font-size: $default-font-size;
       color: $alt-text-color;
       border: 2px solid $alt-text-color;
+    }
+
+  }
+
+  &__who-cta{
+    padding: 3rem 2rem;
+    background-color: $alt-background-color;
+    text-align: center;
+
+    h2{
+      margin-bottom: 1rem;
+      font-size: $header-default-size;
+    }
+
+    p{
+      text-align: left;
+      font-weight: 300;
+      font-size: $default-font-size;
+
+      @media screen and (min-width: $tablet){
+        display: inline-block;
+        width: 90%;
+      }
+
+      @media screen and (min-width: $desktop){
+        width: 75%;
+      }
     }
 
   }
