--- a/themes/main-theme/assets/scss/partials/_navbar.scss
+++ b/themes/main-theme/assets/scss/partials/_navbar.scss
@@ -9,6 +9,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 10;
   padding: 0.75rem 1.5rem;
   background-color: transparent;
   text-align: right;
