--- a/themes/main-theme/assets/scss/partials/_typography.scss
+++ b/themes/main-theme/assets/scss/partials/_typography.scss
@@ -6,5 +6,5 @@
 $header-font: 'Lato', sans-serif;
 $default-font: 'Source Sans Pro', sans-serif;
 
-$header-default-size: 1.4rem;
-$default-font-size: 1rem;
+$header-default-size: 1.5rem;
+$default-font-size: 1.2rem;
